Fixed gap at the bottom of resume embed

--- a/src/routes/Resume.css
+++ b/src/routes/Resume.css
@@ -1,4 +1,5 @@
 ﻿.Pdf {
     width: 100%;
-    height: calc(100vh - 132px);
+    height: calc(100vh - 127px);
+    margin-bottom: -5px;  /* Needed to prevent a white horizontal line at the bottom */
 }
